<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.dweepdroid.github.customview.NaviTextView
        style="@style/TitleTextView"
        android:text="@string/repo_details"
        app:ttf_type="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSecondary"/>

    <LinearLayout
        android:id="@+id/userInfoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginStart="20dp">

        <com.dweepdroid.github.customview.NaviTextView
            android:id="@+id/repoNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repo_name"/>

        <com.dweepdroid.github.customview.NaviTextView
            android:id="@+id/repoIdTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"/>

        <com.dweepdroid.github.customview.NaviTextView
            android:id="@+id/repoOpenIssuesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>